cabal-version:      3.6
name:               cardano-collateral-api
version:            0.1.0.0
synopsis:
    An API to provide collateral UTxOs for Cardano transactions and sign a given transaction if valid
homepage:           keyan-m.github.io
license:            Apache-2.0
license-file:       LICENSE
author:             keyan-m
maintainer:         keyanmaskoot@gmail.com
category:           Blockchain
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:   src
    exposed-modules:  CCApi.Utils
    other-modules:    Paths_cardano_collateral_api
    autogen-modules:  Paths_cardano_collateral_api
    build-depends:    aeson
                    , base ^>=4.18.1.0
                    , base16
                    , blockfrost-api ^>= 0.10
                    , blockfrost-client ^>= 0.8
                    , bytestring
                    , cardano-api ^>= 8.38.0.1
                    , cardano-cli ^>= 8.20.0.0
                    , cardano-crypto-class ^>= 2.1.4.0
                    , cardano-ledger-core >= 1.8
                    , containers
                    , pretty-simple

executable cardano-collateral-api
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.1.0
                    , blockfrost-api ^>= 0.10
                    , blockfrost-client ^>= 0.8
                    , bytestring
                    , cardano-api ^>= 8.38.0.1
                    , cardano-collateral-api
                    , lens
                    , pretty-simple
    hs-source-dirs:   app
    default-language: Haskell2010
